Headers and list add to index.html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta name="author" description="Khaki" >
+    <meta name="author" content="Khaki" />
     <title>Git Lectures - Coursera</title>
   </head>
 
   <body>
-    <h1>
-      Hello - welcome to git commands lecture with coursera
-    </h1>
+    <h1>Hello - welcome to git commands lecture with coursera</h1>
+    <p>This is my first html page for git lecture</p>
+    <ul>
+      <li>Git Basics</li>
+      <li>Git Branching</li>
+      <li>Git Remote</li>
+      <li>Git Collaboration</li>
+      <li>GitHub</li>
+    </ul>
   </body>
 </html>
