bug fix in index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta name="author" description="Khaki" >
+    <meta name="author" content="Khaki" />
     <title>Git Lectures - Coursera</title>
   </head>
 
