--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   </head>
 
   <body>
-    <h1>
-      Hello - welcome to git commands lecture with coursera
-    </h1>
+    <h1>Hello - welcome to git commands lecture with coursera</h1>
   </body>
 </html>
